--- a/css/style.css
+++ b/css/style.css
@@ -393,17 +393,16 @@ main {
 
 
 /* MAGIC */
-.stuff {
+.media {
     border-radius: 4px;
     box-sizing: border-box;
 
     position: relative;
   }
-.stuff::before {
+.media::before {
     content: '';
     border: 1px solid rgba(5, 5, 5, 0.1);
     border-radius: 4px;
-    width: 100%;
     box-sizing: border-box;
 
     position: absolute;
@@ -411,6 +410,18 @@ main {
     right: 0;
     bottom: 0;
     left: 0;
+}
+.graphic {
+    background-color: rgba(5, 5, 5, 0.1);
+
+    padding: 16px;
+
+    transition: 0.28s;
+}
+.graphic:hover {
+    background-color: rgba(5, 5, 5, 0.3);
+
+    transition: 0.28s;
 }
 .caption {
     margin-top: 8px;
