--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,6 @@ h1::selection, h2::selection, h3::selection, p::selection, a::selection, span::s
 html {
     color: var(--darkerShade);
     background: var(--bg);
-
     width: 100vw;
     height: 100vh;
 }
@@ -146,6 +145,7 @@ body {
     flex-grow: 1;
     width: 100vw;
 
+    position: relative;
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -256,18 +256,24 @@ nav {
     gap: 8px;
 }
 
+#zk-logo {
+    color: var(--fullShade);
+    fill-opacity: 0.3;
+    width: 40px;
+    height: 40px;
+}
+
 
 /* FOOTER */
 footer {
     padding: 24px 40px;
     justify-content: space-between;
 }
+#weather {
+    color: var(--darkShade);
 
-#zk-logo {
-    color: var(--fullShade);
-    fill-opacity: 0.3;
-    width: 40px;
-    height: 40px;
+    align-items: center;
+    gap: 8px;
 }
 
 
@@ -286,19 +292,6 @@ main {
 }
 #subtitle {
     color: var(--darkShade);
-
-    justify-content: space-between;
-}
-#weather {
-    color: var(--darkShade);
-    background-color: var(--bg);
-    border-radius: 4px;
-    border: 1px solid var(--darkShade);
-
-    box-sizing: border-box;
-    align-items: center;
-    padding: 0px 4px;
-    gap: 8px;
 }
 
 #tile-stack {
@@ -359,11 +352,11 @@ main {
 
     padding: 30px 24px 18px 24px;
 }
-
 .top {
     justify-content: flex-end;
     flex-grow: 1;
 }
+
 #flashing {
     animation: 2.0s infinite flashing;
 }
@@ -451,7 +444,38 @@ main {
   }
 
 
+/* DELIGHTS */
+.weather-effect {
+    display: none;
+    background: var(--bg);
+    width: 100%;
+    height: 100%;
 
+    position: absolute;
+    top: 0;
+    left: 0;
+	right: 0;
+	bottom: 0;
+    margin: auto;
+    z-index: -1;
+}
+#splash {
+    display: none;
+    background: var(--bg);
+    width: 100%;
+    height: 12px;
+
+    position: absolute;
+    left: 0;
+	right: 0;
+	bottom: 0;
+    margin: auto;
+    z-index: -1;
+}
+#sun {
+    background-color: red;
+    opacity: 0.5;
+}
 
 
 
@@ -481,8 +505,8 @@ main {
     }
 
     .icon-s, .icon-l {
-        width: 32px;
-        height: 32px;
+        width: 24px;
+        height: 24px;
     
         padding: 3px;
     }
@@ -508,13 +532,12 @@ main {
         width: 100%;
     }
     .tile {
-        color: var(--darkerShade);
         width: 100%;
     }
     .tl {
         flex-grow: 1;
         height: 240px;
-        box-shadow: inset 0px -4px 0px 8px var(--darkerShade);
+        box-shadow: inset 0px -4px 0px 8px var(--darkShade);
     
         padding: 32px;
         gap: 6px;
@@ -524,7 +547,7 @@ main {
     }
     .ts {
         height: 240px;
-        box-shadow: inset 0px -4px 0px 8px var(--darkerShade);
+        box-shadow: inset 0px -4px 0px 8px var(--darkShade);
     
         padding: 32px;
         gap: 6px;
@@ -586,9 +609,16 @@ main {
         padding: 2px;
     }
     
-    header, footer {
+    header {
         padding: 16px;
         gap: 16px;
+    }
+    footer {
+        padding: 8px 16px;
+        gap: 16px;
+    }
+    #weather {
+        width: fit-content;
     }
     main {
         padding: 0px 16px;
@@ -600,11 +630,6 @@ main {
         flex-direction: column;
         gap: 16px;
     }
-    #weather {
-        width: fit-content;
-
-        padding: 2px 4px;
-    }
     #tile-stack {
         grid-template-columns: 1fr;
 
@@ -612,14 +637,14 @@ main {
     }
     .tl {
         height: 160px;
-        box-shadow: inset 0px -4px 0px 8px var(--darkerShade);
+        box-shadow: inset 0px -4px 0px 8px var(--darkShade);
     
         padding: 24px;
         gap: 4px;
     }
     .ts {
         height: 160px;
-        box-shadow: inset 0px -4px 0px 8px var(--darkerShade);
+        box-shadow: inset 0px -4px 0px 8px var(--darkShade);
     
         padding: 24px;
         gap: 4px;      
