--- a/css/style.css
+++ b/css/style.css
@@ -473,8 +473,7 @@ main {
     z-index: -1;
 }
 #sun {
-    background-color: red;
-    opacity: 0.5;
+    animation: 4.8s ease-in-out infinite sun-gradient;
 }
 
 
@@ -597,6 +596,10 @@ main {
         font-size: 16px;
         letter-spacing: 0px;
     }
+    .button > .sh2 {
+        font-size: 16px;
+        letter-spacing: 1px;
+    }
 
     .grid {
         grid-template-columns: 1fr;
@@ -685,4 +688,15 @@ main {
         border: 1px solid rgba(250, 250, 250, 0.1);
 
     }
+}
+@keyframes sun-gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
