--- a/css/style.css
+++ b/css/style.css
@@ -281,9 +281,6 @@ footer {
     align-items: center;
     gap: 8px;
 }
-#weather-icon {
-    animation: 2.0s infinite play;    
-}
 
 
 /* BODY */
@@ -441,6 +438,20 @@ main {
     margin: auto;
     z-index: -1;
 }
+#cloudy {
+    height: 163px;
+    width: auto;
+    mask-image: linear-gradient(to right, transparent, transparent 40px, black 80px, black calc(100% - 80px), transparent calc(100% - 40px), transparent);
+    -webkit-mask-image: linear-gradient(to right, transparent, transparent 40px, black 80px, black calc(100% - 80px), transparent calc(100% - 40px), transparent);
+    box-sizing: border-box;
+    overflow: visible;
+    
+    top: 88px;
+    left: 35%;
+    right: 0;
+    bottom: auto;
+    margin: 16px;
+}
 #splash {
     display: none;
     background: var(--bg);
@@ -543,6 +554,8 @@ main {
     .media-grid > div, img {
         margin-bottom: 24px;
     }
+
+
 }
 
 @media screen and (max-width: 799px) {
@@ -708,22 +721,4 @@ main {
       100% {
          opacity: 0;
       }
-}
-
-@keyframes play {
-	0% {
-		transform: scale(0.9);
-	}
-    49% {
-        transform: scale(0.9);
-    }
-    50% {
-        transform: scale(1);
-    }
-    99% {
-        transform: scale(1);
-    }
-	100% {
-		transform: scale(0.9);
-	}
 }
