Fix magic page mobile behavior with videos
* Fixed autoplay takeover issue on mobile safari
* Added Ramp mobile app loading video
* Disabled right-click → save on web

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,8 @@ img, video {
     width: auto;
     height: auto;
     
+    pointer-events: none;
+    -webkit-touch-callout: none;
     -webkit-user-drag: none;
 }
 
